<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TentangKamiActivity"
    tools:ignore="ExtraText">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/imageView2"
        android:src="@drawable/pic1"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txt_sibunaga"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="serif"
        android:text="@string/sibunaga_serba"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_penjelasan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_sibunaga"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="serif"
        android:text="@string/deskripsi_tentang"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/text_versi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_penjelasan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="monospace"
        android:text="@string/versi_1_0"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageMail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/text_versi"
        android:src="@drawable/mailpic"
        android:contentDescription="@string/todo2" />

    <TextView
        android:id="@+id/text_contact"
        android:layout_width="128dp"
        android:layout_height="37dp"
        android:layout_below="@+id/text_versi"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/imageMail"
        android:fontFamily="serif"
        android:paddingTop="19dp"
        android:text="@string/contact_us"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/subject_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageMail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:hint="@string/subject"
        android:inputType="textCapWords"
         />

    <EditText
        android:id="@+id/pesan_field"
        android:hint="@string/pesankritik"
        android:inputType="text"
        android:minHeight="120dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subject_field"/>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentRight="true"
        android:onClick="submitPesan"
        android:text="@string/kirim"
        android:layout_below="@+id/pesan_field"/>





    <!--
    "sibunaga_serba"
    "deskripsi_tentang"

    <TextView
        android:id="@+id/subject_txt"
        android:layout_below="@+id/imageMail"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="SUBJECT"
        android:textSize="15sp"
        android:textStyle="bold"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:id="@+id/subject_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageMail"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        android:textSize="12sp"
        android:text="Subject" />
    <EditText
        android:id="@+id/messageKritik"
        android:hint="Masukan Pesan disini..."
        android:inputType="text"
        android:minHeight="150dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageMail"

    <ImageView

        <EditText
        android:id="@+id/messageSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        android:inputType="textCapWords" />

        android:id="@+id/imageWebsite"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/text_versi"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:src="@drawable/worldwidepic" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:id="@+id/textView"
            android:layout_below="@id/imageView2"
            android:text="@string/dragon"/>

        <TextView
            android:id="@+id/txt_kosong1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/btn_back"
            android:background="@android:color/darker_gray"
            android:text="SIAPA"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:layout_marginTop="50dp"
            android:background="@android:color/darker_gray"
            android:layout_toRightOf="@+id/txt_kosong1"
            android:text="BUAH NAGA" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="1dp"
        android:text="Home" />


    -->


</RelativeLayout>